--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -187,6 +187,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Account\AccountController.cs" />
+    <Compile Include="Controllers\Pages\RegionController.cs" />
     <Compile Include="Controllers\Pages\AdminController.cs" />
     <Compile Include="Controllers\Pages\AreaController.cs" />
     <Compile Include="Controllers\Pages\HomeController.cs" />
