--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -279,8 +279,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\Segment\AthleteRideInfo.cs" />
+    <Compile Include="ViewModel\Segment\RegionViewModel.cs" />
     <Compile Include="ViewModel\Segment\SegmentAreaViewModel.cs" />
     <Compile Include="ViewModel\Segment\SegmentViewModel.cs" />
+    <Compile Include="ViewModel\Segment\Shared\Ride.cs" />
     <Compile Include="ViewModel\Shared\RideUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -290,6 +292,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\yersey\green.png" />
     <Content Include="Content\images\yersey\polkadot.png" />
     <Content Include="Content\images\yersey\yellow.png" />
@@ -437,10 +440,10 @@
     <Content Include="Views\Area\YerseyPart.cshtml" />
     <Content Include="Views\Area\SegmentsPart.cshtml" />
     <Content Include="Views\Area\AthleteInfoPart.cshtml" />
+    <Content Include="Views\Region\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Region\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
